Working on fixing text overflows on mobile.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -200,7 +200,7 @@ body{
 @media only screen and (max-device-width: 600px){
 
     *{
-        word-wrap: break-word;
+        white-space: normal;
     }
 
     body{
